Backport unit tests to Java 8