@@ -1,10 +1,12 @@
 package dev.the_fireplace.annotateddi.test.unit.loader;
 
+import com.google.common.collect.Sets;
 import dev.the_fireplace.annotateddi.impl.loader.InjectorNodeFinderImpl;
 import dev.the_fireplace.annotateddi.test.stub.LoaderHelperStub;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -25,7 +27,7 @@ public final class InjectorNodeFinderImplTest
     public void test_getNode_simpleSetup_findsNodeContainingGivenModid() {
         // Arrange
         String modId = "testmod";
-        loaderHelperStub.addMod(modId, Set.of());
+        loaderHelperStub.addMod(modId, Collections.emptySet());
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getNode(modId);
@@ -40,8 +42,8 @@ public final class InjectorNodeFinderImplTest
         // Arrange
         String modId = "testmod";
         String modId2 = "testmod2";
-        loaderHelperStub.addMod(modId, Set.of(modId2));
-        loaderHelperStub.addMod(modId2, Set.of(modId));
+        loaderHelperStub.addMod(modId, Sets.newHashSet(modId2));
+        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getNode(modId);
@@ -60,11 +62,11 @@ public final class InjectorNodeFinderImplTest
         String modId3 = "testmod3";
         String modId4 = "testmod4";
         String modId5 = "testmod5";
-        loaderHelperStub.addMod(modId, Set.of(modId2));
-        loaderHelperStub.addMod(modId2, Set.of(modId3));
-        loaderHelperStub.addMod(modId3, Set.of(modId4));
-        loaderHelperStub.addMod(modId4, Set.of(modId5));
-        loaderHelperStub.addMod(modId5, Set.of(modId));
+        loaderHelperStub.addMod(modId, Sets.newHashSet(modId2));
+        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId3));
+        loaderHelperStub.addMod(modId3, Sets.newHashSet(modId4));
+        loaderHelperStub.addMod(modId4, Sets.newHashSet(modId5));
+        loaderHelperStub.addMod(modId5, Sets.newHashSet(modId));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getNode(modId);
@@ -88,13 +90,13 @@ public final class InjectorNodeFinderImplTest
         String modId5 = "testmod5";
         String otherModId1 = "othertestmod1";
         String otherModId2 = "othertestmod2";
-        loaderHelperStub.addMod(modId, Set.of(modId2));
-        loaderHelperStub.addMod(modId2, Set.of(modId3));
-        loaderHelperStub.addMod(modId3, Set.of(modId4));
-        loaderHelperStub.addMod(modId4, Set.of(modId5));
-        loaderHelperStub.addMod(modId5, Set.of(modId));
-        loaderHelperStub.addMod(otherModId1, Set.of());
-        loaderHelperStub.addMod(otherModId2, Set.of(otherModId1));
+        loaderHelperStub.addMod(modId, Sets.newHashSet(modId2));
+        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId3));
+        loaderHelperStub.addMod(modId3, Sets.newHashSet(modId4));
+        loaderHelperStub.addMod(modId4, Sets.newHashSet(modId5));
+        loaderHelperStub.addMod(modId5, Sets.newHashSet(modId));
+        loaderHelperStub.addMod(otherModId1, Collections.emptySet());
+        loaderHelperStub.addMod(otherModId2, Sets.newHashSet(otherModId1));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getNode(modId);
@@ -118,13 +120,13 @@ public final class InjectorNodeFinderImplTest
         String modId5 = "testmod5";
         String otherModId1 = "othertestmod1";
         String otherModId2 = "othertestmod2";
-        loaderHelperStub.addMod(modId, Set.of(modId2));
-        loaderHelperStub.addMod(modId2, Set.of(modId3));
-        loaderHelperStub.addMod(modId3, Set.of(modId4));
-        loaderHelperStub.addMod(modId4, Set.of(modId5));
-        loaderHelperStub.addMod(modId5, Set.of(modId));
-        loaderHelperStub.addMod(otherModId1, Set.of(modId4));
-        loaderHelperStub.addMod(otherModId2, Set.of(otherModId1));
+        loaderHelperStub.addMod(modId, Sets.newHashSet(modId2));
+        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId3));
+        loaderHelperStub.addMod(modId3, Sets.newHashSet(modId4));
+        loaderHelperStub.addMod(modId4, Sets.newHashSet(modId5));
+        loaderHelperStub.addMod(modId5, Sets.newHashSet(modId));
+        loaderHelperStub.addMod(otherModId1, Sets.newHashSet(modId4));
+        loaderHelperStub.addMod(otherModId2, Sets.newHashSet(otherModId1));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getNode(otherModId2);
@@ -151,7 +153,7 @@ public final class InjectorNodeFinderImplTest
     public void test_getParent_noDependenciesDeclared_returnsMinecraft() {
         // Arrange
         String modId = "not_minecraft";
-        loaderHelperStub.addMod(modId, Set.of());
+        loaderHelperStub.addMod(modId, Collections.emptySet());
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getParentNode(modId);
@@ -167,8 +169,8 @@ public final class InjectorNodeFinderImplTest
         // Arrange
         String modId = "testmod";
         String modId2 = "testmod2";
-        loaderHelperStub.addMod(modId, Set.of());
-        loaderHelperStub.addMod(modId2, Set.of(modId));
+        loaderHelperStub.addMod(modId, Collections.emptySet());
+        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getParentNode(modId2);
@@ -186,10 +188,10 @@ public final class InjectorNodeFinderImplTest
         String modId2 = "testmod2";
         String modId3 = "testmod3";
         String modId4 = "testmod4";
-        loaderHelperStub.addMod(modId, Set.of());
-        loaderHelperStub.addMod(modId2, Set.of(modId));
-        loaderHelperStub.addMod(modId3, Set.of(modId2));
-        loaderHelperStub.addMod(modId4, Set.of(modId3));
+        loaderHelperStub.addMod(modId, Collections.emptySet());
+        loaderHelperStub.addMod(modId2, Sets.newHashSet(modId));
+        loaderHelperStub.addMod(modId3, Sets.newHashSet(modId2));
+        loaderHelperStub.addMod(modId4, Sets.newHashSet(modId3));
 
         // Act
         Collection<String> actual = createInjectorNodeFinder().getParentNode(modId3);
